--- a/.github/workflows/generate_theoretical.yml
+++ b/.github/workflows/generate_theoretical.yml
@@ -1,18 +1,12 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Generate PDF of Theoretical
+run-name: Generating PDF of Theoretical
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  generate-theoretical:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: install latex packages
+        run: sudo apt install texlive texinfo texlive-fonts-recommended texlive-latex-extra
+
+      - name: execute generate_theoretical.py
+        run: python ./generate_latex/generate_theoretical.py
