--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -8,8 +8,11 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content
 
-      #- name: install latex packages
-      #  run: sudo apt install texlive texinfo texlive-fonts-recommended texlive-latex-extra
+      - name: install latex packages
+        run: sudo apt install texlive texinfo texlive-fonts-recommended texlive-latex-extra
+
+      - name: debug
+        run: pdflatex -interaction=nonstopmode -halt-on-error generate_latex/theoretical.tex
 
       - name: generating theoretical pdf
         run: python generate_latex/generate_theoretical.py
