--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -18,6 +18,7 @@ jobs:
         run: python generate_latex/generate_theoretical.py
 
   release-project:
+    runs-on: ubuntu-latest
     steps:
       - name: Create GitHub release
         id: create-new-release
