--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
+          tag_name: tag-${{ github.ref }}
           release_name: Release ${{ github.ref }}
       
       - name: Upload Release Asset (notebook.pdf)
