--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -2,22 +2,34 @@ name: Generate PDF of Notebook and Theoretical
 run-name: Generating PDF of Notebook and Theoretical
 on: [push]
 jobs:
-  generate-pdfs:
+  install-latex-packages:
+    runs-on: ubuntu-latest
+    steps:
+      - name: install latex packages
+        run: sudo apt install texlive texinfo texlive-fonts-recommended texlive-latex-extra
+
+  generate-notebook-pdf:
+    needs: install-latex-packages
     runs-on: ubuntu-latest
     steps:
       - name: checkout repository content
         uses: actions/checkout@v2
 
-      - name: install latex packages
-        run: sudo apt install texlive texinfo texlive-fonts-recommended texlive-latex-extra
-
       - name: generating notebook pdf
         run: python generate_latex/generate_notebook.py
+
+  generate-theoretical-pdf:
+    needs: install-latex-packages
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repository content
+        uses: actions/checkout@v2
 
       - name: generating theoretical pdf
         run: python generate_latex/generate_theoretical.py
 
   release-project:
+    needs: [generate-notebook-pdf, generate-theoretical-pdf]
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
