--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -34,6 +34,12 @@ jobs:
       
       - uses: actions/checkout@v3
 
+      - name: outros
+        run: ls
+
+      - name: Display structure of downloaded files
+        run: ls -R
+
       - name: Download artifact theoretical.pdf
         uses: actions/download-artifact@v3
         with:
