test: Trying to dowlonad artifact

--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -40,10 +40,16 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -R
 
-      - name: Download artifact theoretical.pdf
-        uses: actions/download-artifact@v3
+      - name: Upload theoretical.pdf
+        uses: actions/upload-artifact@v3
         with:
           name: theoretical.pdf
+          path: ./theoretical.pdf
+
+      # - name: Download artifact theoretical.pdf
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: theoretical.pdf
       
       - name: Display structure of downloaded files
         run: ls -R
