--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -59,33 +59,34 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      
+      - name: Display structure of downloaded files
+        run: ls -R
 
-      - name: Create GitHub release
-        id: create-new-release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: tag-${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+      # - name: Create GitHub release
+      #   id: create-new-release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: tag-${{ github.ref }}
+      #     release_name: Release ${{ github.ref }}
       
-      - name: Upload Release Asset (notebook.pdf)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-          asset_path: ./notebook.pdf
-          asset_name: notebook.pdf
-          asset_content_type: application/pdf
+      # - name: Upload Release Asset (notebook.pdf)
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+      #     asset_path: ./notebook.pdf
+      #     asset_name: notebook.pdf
+      #     asset_content_type: application/pdf
       
-      - name: Upload Release Asset (theoretical.pdf)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-          asset_path: ./theoretical.pdf
-          asset_name: theoretical.pdf
-          asset_content_type: application/pdf
+      # - name: Upload Release Asset (theoretical.pdf)
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+      #     asset_path: ./theoretical.pdf
+      #     asset_name: theoretical.pdf
+      #     asset_content_type: application/pdf
