test: Trying to dowlonad artifact

--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -51,7 +51,10 @@ jobs:
 
   release-project:
     needs: [generate-theoretical-pdf]
-
+    permissions:
+      id-token: write # This is required for requesting the JWT
+      contents: read  # This is required for actions/checkout
+      
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact theoretical.pdf
