--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -44,14 +44,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Download artifact theoretical.pdf
-        uses: actions/download-artifact@v3
-        with:
-          name: theoretical.pdf
-      
-      - name: Display structure of downloaded files
-        run: ls -R
-
       - name: Create GitHub release
         id: create-new-release
         uses: actions/create-release@v1
@@ -61,22 +53,30 @@ jobs:
           tag_name: tag-${{ github.ref }}
           release_name: Release ${{ github.ref }}
       
-      - name: Upload Release Asset (notebook.pdf)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-          asset_path: ./notebook.pdf
-          asset_name: notebook.pdf
-          asset_content_type: application/pdf
+      # - name: Download artifact theoretical.pdf
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: theoretical.pdf
       
-      - name: Upload Release Asset (theoretical.pdf)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-          asset_path: ./theoretical.pdf
-          asset_name: theoretical.pdf
-          asset_content_type: application/pdf
+      # - name: Display structure of downloaded files
+      #   run: ls -R
+
+      # - name: Upload Release Asset (notebook.pdf)
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+      #     asset_path: ./notebook.pdf
+      #     asset_name: notebook.pdf
+      #     asset_content_type: application/pdf
+      
+      # - name: Upload Release Asset (theoretical.pdf)
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+      #     asset_path: ./theoretical.pdf
+      #     asset_name: theoretical.pdf
+      #     asset_content_type: application/pdf
