--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -42,14 +42,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       runs-on: ubuntu-latest
-      
-      - uses: actions/checkout@v3
-      - name: Create a Release
-        uses: elgohr/Github-Release-Action@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+
+      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          title: MyReleaseMessage
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: |
+            LICENSE.txt
+            *.jar
       # - name: Checkout code
       #   uses: actions/checkout@v2
 
