test: Trying to download artifact

--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -43,7 +43,8 @@ jobs:
     steps:
       runs-on: ubuntu-latest
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - name: "testando"
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
