test: Trying to download artifact

--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -35,6 +35,7 @@ jobs:
 
   release-project:
     # needs: generate-pdfs
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: "testando"
