--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -2,43 +2,52 @@ name: Generate PDF of Notebook and Theoretical
 run-name: Generating PDF of Notebook and Theoretical
 on: [push]
 jobs:
-  # generate-pdfs:
-  #   # needs: install-latex-packages
-  #   permissions: write-all
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: install latex packages
-  #       run: sudo apt install texlive texinfo texlive-fonts-recommended texlive-latex-extra
-
-  #     - name: checkout repository content
-  #       uses: actions/checkout@v2
-
-  #     - name: generating theoretical pdf
-  #       run: python generate_latex/generate_theoretical.py
-      
-  #     - uses: actions/checkout@v3
-
-  #     - name: outros
-  #       run: ls
-
-  #     - name: Display structure of downloaded files
-  #       run: ls -R
-
-  #     - name: Upload theoretical.pdf
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: theoretical.pdf
-  #         path: ./theoretical.pdf
-      
-  #     - name: Display structure of downloaded files
-  #       run: ls -R
-
-  release-project:
-    # needs: generate-pdfs
+  generate-pdfs:
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
-      - name: "testando"
+      - name: install latex packages
+        run: sudo apt install texlive texinfo texlive-fonts-recommended texlive-latex-extra
+
+      - name: checkout repository content
+        uses: actions/checkout@v2
+
+      - name: generating theoretical pdf
+        run: python generate_latex/generate_theoretical.py
+      
+      - uses: actions/checkout@v3
+
+      - name: outros
+        run: ls
+
+      - name: Display structure of downloaded files
+        run: ls -R
+
+      - name: Upload theoretical.pdf
+        uses: actions/upload-artifact@v3
+        with:
+          name: theoretical.pdf
+          path: ./theoretical.pdf
+      
+      - name: Display structure of downloaded files
+        run: ls -R
+
+  release-project:
+    needs: generate-pdfs
+    permissions: write-all
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact theoretical.pdf
+        uses: actions/download-artifact@v3
+        with:
+          name: theoretical.pdf
+
+      - name: Download artifact notebook.pdf
+        uses: actions/download-artifact@v3
+        with:
+          name: notebook.pdf
+
+      - name: "Create GitHub release"
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
@@ -46,44 +55,5 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            LICENSE.txt
-            *.jar
-      # - name: Checkout code
-      #   uses: actions/checkout@v2
-
-      # - name: Create GitHub release
-      #   id: create-new-release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     tag_name: tag-${{ github.ref }}
-      #     release_name: Release ${{ github.ref }}
-      
-      # - name: Download artifact theoretical.pdf
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: theoretical.pdf
-      
-      # - name: Display structure of downloaded files
-      #   run: ls -R
-
-      # - name: Upload Release Asset (notebook.pdf)
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-      #     asset_path: ./notebook.pdf
-      #     asset_name: notebook.pdf
-      #     asset_content_type: application/pdf
-      
-      # - name: Upload Release Asset (theoretical.pdf)
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-      #     asset_path: ./theoretical.pdf
-      #     asset_name: theoretical.pdf
-      #     asset_content_type: application/pdf
+            theoretical.pdf
+            notebook.pdf
