test: Trying to download artifact

--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -29,8 +29,11 @@ jobs:
           name: theoretical.pdf
           path: ./theoretical.pdf
       
-      - name: Display structure of downloaded files
-        run: ls -R
+      - name: Upload notebook.pdf
+        uses: actions/upload-artifact@v3
+        with:
+          name: notebook.pdf
+          path: ./notebook.pdf
 
   release-project:
     needs: generate-pdfs
