feat: Automatic release on push

--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -13,6 +13,9 @@ jobs:
       - name: checkout repository content
         uses: actions/checkout@v3
 
+      - name: generating notebook pdf
+        run: python generate_latex/generate_notebook.py
+
       - name: generating theoretical pdf
         run: python generate_latex/generate_theoretical.py
 
