--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -19,40 +19,49 @@ jobs:
       - name: generating theoretical pdf
         run: python generate_latex/generate_theoretical.py
 
-      - name: Upload theoretical.pdf
+      - name: upload theoretical.pdf
         uses: actions/upload-artifact@v3
         with:
           name: theoretical.pdf
           path: ./theoretical.pdf
       
-      - name: Upload notebook.pdf
+      - name: upload notebook.pdf
         uses: actions/upload-artifact@v3
         with:
           name: notebook.pdf
           path: ./notebook.pdf
+      
+      - name: stage changed files
+        run: git add .
+      
+      - name: commit changed files
+        run: git commit -m "auto: Updating notebook.pdf and theoretical.pdf"
+
+      - name: push code to main
+        run: git push origin HEAD:main
 
   release-project:
     needs: generate-pdfs
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
-      - name: Download artifact theoretical.pdf
+      - name: download artifact theoretical.pdf
         uses: actions/download-artifact@v3
         with:
           name: theoretical.pdf
 
-      - name: Download artifact notebook.pdf
+      - name: download artifact notebook.pdf
         uses: actions/download-artifact@v3
         with:
           name: notebook.pdf
 
-      - name: "Create GitHub release"
+      - name: "create github release"
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
+          automatic_release_tag: "${{ steps.date.outputs.date }}"
           prerelease: false
-          title: Release ${{ github.ref }}
+          title: Release ${{ steps.date.outputs.date }}
           files: |
             theoretical.pdf
             notebook.pdf
