--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -35,7 +35,7 @@ jobs:
         run: git add .
       
       - name: commit changed files
-        run: git commit -m "auto: Updating notebook.pdf and theoretical.pdf"
+        run: git commit -m "auto:: Updating notebook.pdf and theoretical.pdf"
 
       - name: push code to main
         run: git push origin HEAD:main
