fix: Changed name of release

--- a/.github/workflows/generate_latex.yml
+++ b/.github/workflows/generate_latex.yml
@@ -66,7 +66,7 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
-          title: Release ${{ github.ref }}
+          title: Notebook & Theoretical
           files: |
             theoretical.pdf
             notebook.pdf
